[gd_scene load_steps=2 format=2]

[ext_resource path="res://DateiLaden.gd" type="Script" id=1]

[node name="LoadImage" type="Node2D"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 1.0
margin_top = 15.0
margin_right = 800.0
margin_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 11
size_flags_vertical = 11
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 357.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Datei:"

[node name="TextEdit" type="LineEdit" parent="GridContainer"]
margin_left = 361.0
margin_right = 718.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="btn_LoadPict" type="Button" parent="GridContainer"]
margin_left = 722.0
margin_right = 798.0
margin_bottom = 24.0
text = "Bild laden"

[node name="FileDialog" type="FileDialog" parent="."]
margin_top = 20.0
margin_right = 480.0
margin_bottom = 660.0
rect_min_size = Vector2( 320, 400 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/Users/bernd/OneDrive/Dokumente/godot/UserInterfaces"
current_path = "/Users/bernd/OneDrive/Dokumente/godot/UserInterfaces/"

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 80.0
margin_right = 800.0
margin_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GridContainer/btn_LoadPict" to="." method="_on_btn_LoadPict_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
